# zync

./: .gitignore  AGENTS.md  CODEX_NOTES.md  INTEGRATE.md  README.md  build.gradle.kts  haloy.yaml  hostapd_895700.conf  key.properties.example  settings.gradle.kts
.github/workflows/: ci.yml  deploy.yml  release.yml  server-deploy.yml
Casks/: zync.rb
android/netsimd/: netsim_session_stats.json
app/: build.gradle.kts  proguard-rules.pro
core/: build.gradle.kts
data/: build.gradle.kts
deploy/: bootstrap.md  litestream-restore.service  litestream.service  provision-ec2.sh  provision-policy.json  restore-drill.service  restore-drill.sh  restore-drill.timer
desktop/: .gitignore  README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/examples/: real_phone_e2e.rs
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  discovery.rs  identity.rs  lib.rs  paired_store.rs  pairing.rs  pinning.rs  proxy.rs
desktop/src-tauri/tests/: connect.rs  discovery.rs  fake_phone.rs  pairing_e2e.rs  proxy.rs
desktop/ui/: index.html  main.js  pairing.js  style.css  tauri.js
docs/: INSTALL.md  agenda-apps-script.gs  style.md
gradle/: libs.versions.toml
node-compile-cache/v26.4.0-x64-8d7ad2ee-1000/: 0014c7b4  00279342  010ca46c  01b7386d  022c8d76  (+541 more)
scripts/: make-release-keystore.sh
sdk/: README.md  smoke_e2e.sh
server/: Caddyfile  Dockerfile  build.gradle.kts  docker-compose.yml  docker-entrypoint.sh  litestream.yml
web/: build.gradle.kts
webtest/: README.md  package-lock.json  package.json  playwright.config.js
(+489 files in other folders)
