[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2.2"
mdns-sd = "0.20"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
rustls = "0.23"
rustls-pki-types = "1.15"
keyring = "4.1"
qrcode = "0.14"
rand = "0.10"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
sha2 = "0.11"
base64 = "0.22"
tokio-tungstenite = "0.29"
anyhow = "1"
log = "0.4"

[dev-dependencies]
axum = { version = "0.8", features = ["ws"] }
rcgen = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
tempfile = "3"

